--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-catboost==1.0.6
+xgboost==1.6.1
+xlrd==2.0.1
 joblib==1.1.0
-lightgbm==3.3.2
 matplotlib==3.5.2
 pandas==1.4.2
 scikit_learn==1.1.1
+numpy==1.19.5
